--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <!--own css-->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!--bootstrap CDN-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!--bootstrap javascript-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   
 </head>
 <body>
