changed size of title, took out a div, added a style

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,17 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1>Note Scraper</h1>
-    <h2><i>If you can do this...the homework should be no problem.</i></h2>
+    <h1>Huffington Post Scrape</h1>
+    <h4>Click on Article Title in order to compose a note.</h4>
+    <hr>
     <div id="articles"></div>
     <div id="notes"></div>
+    
   </div>
+
+
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
   <script src="app.js"></script>
+
 </body>
 </html>
